// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`post card component render with very long title 1`] = `
<div>
  <div
    class="post-card"
    classname="test"
  >
    <nuxtlink-stub
      class="post-card__image"
      to="/blog/its-not-just-a-layout-what-do-you-need-to-know-to/"
    >
      <img
        class="img_lazy"
        data-src="https://images.prismic.io/superpupertest/e746f4e6-ce33-47b7-b828-5f315fea2bbb_1_bmF_K9TNqtHpHzUUiI_y5Q.jpeg?auto=compress,format"
        height="217"
        width="400"
      />
    </nuxtlink-stub>
     
    <div
      class="post-card__info"
    >
      <nuxtlink-stub
        to="/blog/its-not-just-a-layout-what-do-you-need-to-know-to/"
      >
        <h2
          class="post-card__title post-card__title--short"
          title="The best practices for improving layout quality on your websiteThe best practices for improving layout quality on your websiteThe best practices for improving layout quality on your websiteThe best practices for improving layout quality on your websiteThe best practices for improving layout quality on your websiteThe best practices for improving layout quality on your website"
        >
          
        The best practices for improving layout quality on...
      
        </h2>
         
        <h2
          class="post-card__title post-card__title--very-short"
          title="The best practices for improving layout quality on your websiteThe best practices for improving layout quality on your websiteThe best practices for improving layout quality on your websiteThe best practices for improving layout quality on your websiteThe best practices for improving layout quality on your websiteThe best practices for improving layout quality on your website"
        >
          
        The best practices for improving...
      
        </h2>
         
        <h2
          class="post-card__title post-card__title--full"
          title="The best practices for improving layout quality on your websiteThe best practices for improving layout quality on your websiteThe best practices for improving layout quality on your websiteThe best practices for improving layout quality on your websiteThe best practices for improving layout quality on your websiteThe best practices for improving layout quality on your website"
        >
          
        The best practices for improving layout quality on your websiteThe best practices for improving layout quality on your websiteThe best practices for improving layout quality on your websiteThe best practices for improving layout quality on your websiteThe best practices for improving layout quality on your websiteThe best practices for improving layout quality on your website
      
        </h2>
         
        <p
          class="post-card__paragraph"
          data-testid="test-post-card"
        >
          
        Let’s start with a partial list of how a valid and semantic layout can improve any project:The best practices for improving layout quality on your...
      
        </p>
      </nuxtlink-stub>
       
      <div
        class="post-card__meta"
      >
        <span
          class="post-card__date"
        >
          Aug 25, 2020
        </span>
         
        <nuxtlink-stub
          class="post-tag light post-tag--light-theme"
          data-testid="test-tag"
          event="click"
          to="/blog/tag/markup/"
        >
          
  markup

        </nuxtlink-stub>
      </div>
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`post card component should render correctly with slot 1`] = `
<div>
  <div
    class="post-card"
    classname="test"
  >
    <nuxtlink-stub
      class="post-card__image"
      to="/blog/its-not-just-a-layout-what-do-you-need-to-know-to/"
    >
      <img
        class="img_lazy"
        data-src="https://images.prismic.io/superpupertest/e746f4e6-ce33-47b7-b828-5f315fea2bbb_1_bmF_K9TNqtHpHzUUiI_y5Q.jpeg?auto=compress,format"
        height="217"
        width="400"
      />
    </nuxtlink-stub>
     
    <div
      class="post-card__info"
    >
      <nuxtlink-stub
        to="/blog/its-not-just-a-layout-what-do-you-need-to-know-to/"
      >
        <h2
          class="post-card__title post-card__title--short"
          title="The best practices for improving layout quality on your website"
        >
          
        The best practices for improving layout quality on...
      
        </h2>
         
        <h2
          class="post-card__title post-card__title--very-short"
          title="The best practices for improving layout quality on your website"
        >
          
        The best practices for improving...
      
        </h2>
         
        <h2
          class="post-card__title post-card__title--full"
          title="The best practices for improving layout quality on your website"
        >
          
        The best practices for improving layout quality on your website
      
        </h2>
         
        <p
          class="post-card__paragraph"
          data-testid="test-post-card"
        >
          
        Let’s start with a partial list of how a valid and semantic layout can improve any project:
      
        </p>
      </nuxtlink-stub>
       
      <div
        class="post-card__meta"
      >
        <span
          class="post-card__date"
        >
          Aug 25, 2020
        </span>
         
        <nuxtlink-stub
          class="post-tag light post-tag--light-theme"
          data-testid="test-tag"
          event="click"
          to="/blog/tag/markup/"
        >
          
  markup

        </nuxtlink-stub>
      </div>
       
      <!---->
    </div>
  </div>
</div>
`;
